glibc (2.29-9) UNRELEASED; urgency=medium

  * patches/hurd-i386/local-fix-nss.diff: Refresh.
  * patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: Fix setitimer.

 -- Samuel Thibault <sthibault@debian.org>  Sun, 05 Jan 2020 15:38:41 +0000

glibc (2.29-8) unstable; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/posix_openpt.diff: Add posix_openpt support.
  * patches/hurd-i386/git-errno_location.diff: Fix pthread link of protobuf.

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fixes ASLR bypass for setuid programs (CVE-2019-19126).  Closes: #945250.
    - debian/patches/any/git-socket-constants.diff: upstreamed.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Jan 2020 13:03:42 +0100

glibc (2.29-7) unstable; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/git-altstack-RPC.diff: Fix restoring from altstack while
    blocked in an RPC.
  * patches/hurd-i386/git-getrandom.diff: Add support for getrandom &
    getentropy.

  [ Aurelien Jarno ]
  * debian/rules.d/debhelper.mk: change dependency from libcrypt1-dev to
    libcrypt-dev.  Closes: #947778.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 30 Dec 2019 19:12:42 +0100

glibc (2.29-6) unstable; urgency=medium

  * debian/shlibs-add-udebs: drop libcrypt.
  * Fix rebootstrap and cross-toolchain-base (Closes: #946396):
    - debian/control.in/libc: replace libcrypt1 by ${libcrypt:Depends} and
      libcrypt1-dev by ${libcrypt-dev:Depends}.
    - debian/rules.d/debhelper.mk: add libcrypt:Depends=libcrypt1 and
      libcrypt-dev:Depends=libcrypt1-dev to substvars unless build with stage1
      or stage2 profiles.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 10 Dec 2019 00:06:38 +0100

glibc (2.29-5) unstable; urgency=medium

  * Upload to unstable.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 06 Dec 2019 21:33:17 +0100

glibc (2.29-4) experimental; urgency=medium

  [ Aurelien Jarno ]
  * Upload to experimental.