@@ -13,8 +13,8 @@ GLIBC_PASSES += i386
 DEB_ARCH_MULTILIB_PACKAGES += libc6-i386 libc6-dev-i386
 libc6-i386_shlib_dep = libc6-i386 (>= $(shlib_dep_ver))
 i386_configure_target = i686-linux-gnu
-i386_CC = $(CC) -m32 -march=pentium4 -mtune=generic
-i386_CXX = $(CXX) -m32 -march=pentium4 -mtune=generic
+i386_CC = $(CC) -m32
+i386_CXX = $(CXX) -m32
 i386_crypt = yes
 i386_slibdir = /lib32
 i386_libdir = /usr/lib32
