@@ -1,7 +1,12 @@
 glibc (2.29-9) UNRELEASED; urgency=medium
 
+  [ Samuel Thibault ]
   * patches/hurd-i386/local-fix-nss.diff: Refresh.
   * patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: Fix setitimer.
+
+  [ Aurelien Jarno ]
+  * debian/sysdeps/{amd64,x32}.mk: do not optimize for pentium4.  Closes:
+    #948396.
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 05 Jan 2020 15:38:41 +0000
 
